7150
Oh, and
```
scala> h(g)
<console>:11: error: type mismatch;
 found   : ((Int, Int)) => Int
 required: (Int, Int) => Int
              h(g)
                ^
```
